cleared all latex warnings

--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -1,5 +1,4 @@
 \usepackage{textcase}
-\usepackage[pdftex]{graphicx}
 %\usepackage{hyperref}
 %\hypersetup{breaklinks=true}
 
@@ -15,8 +14,6 @@
   
 \usepackage{float}
 \usepackage[
-    colorlinks=false,%
-	pdfborder={0,0,0}, %
 	hidelinks,%
     %hyperindex=true,		% Make numbers of index links as well
    	backref=page, 		% Provide page listing where refs occur in the bibliography
@@ -32,7 +29,7 @@
 %%%% USEPACKAGES for MACROS %%%%%
 \usepackage{algpseudocode}
 \usepackage[chapter]{algorithm}
-\usepackage{caption}
+%\usepackage{caption}
 \usepackage{subcaption}
 \usepackage{url}
 
@@ -50,12 +47,12 @@
 \input{macros/table_macros.tex} 
 
 
-\usepackage{xcolor}
+%\usepackage{xcolor}
 
 %\usepackage{refcheck}
 % Sepia
-\definecolor{myBGcolor}{HTML}{F6F0D6}
-\definecolor{myTextcolor}{HTML}{4F452C}
+%\definecolor{myBGcolor}{HTML}{F6F0D6}
+%\definecolor{myTextcolor}{HTML}{4F452C}
 % Dark
 %\definecolor{myBGcolor}{HTML}{3E3535}
 %\definecolor{myTextcolor}{HTML}{CFECEC}
