--- a/latex/publications.tex
+++ b/latex/publications.tex
@@ -12,7 +12,7 @@
 
 \chapter{Community Outreach}
 
-
+\begin{NoHyper}
 \begin{itemize} 
         \item \bibentry{ErlebacherSauleFlyerBollig2013}
         \item \bibentry{BolligFlyerErlebacher2012}
@@ -23,7 +23,7 @@
         \item \bibentry{BolligAGU2011}              
         \item \bibentry{BolligMA2011}
 \end{itemize}
-
+\end{NoHyper}
 
 
 \ifstandalone
